force-app/main/default/objects/Lead_Scoring__c/Lead_Scoring__c.object-meta.xml
<CustomObject>
    <description>Custom object for lead scoring</description>
    <label>Lead Scoring</label>
    <nameField>
        <label>Lead Scoring Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Scoring</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>