force-app/main/default/objects/Lead_Scoring__c/fields/Brand_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Brand_Relationship__c</fullName>
    <label>Brand Relationship</label>
    <referenceTo>BrandRelationship__c</referenceTo>
    <relationshipLabel>Lead Scoring</relationshipLabel>
    <relationshipName>Lead_Scoring</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>