force-app/main/default/objects/Lead_Scoring__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <description>Field that is referenced for scoring</description>
    <label>Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>