force-app/main/default/objects/Lead_Scoring__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>Object that is referenced for scoring</description>
    <label>Object</label>
    <length>80</length>
    <type>Text</type>
</CustomField>