force-app/main/default/objects/Lead_Scoring__c/fields/ObjectId__c.field-meta.xml
<CustomField>
    <fullName>ObjectId__c</fullName>
    <description>The ID of the object the scoring is referencing to</description>
    <label>ObjectId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>